--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@vitejs/plugin-react": "^2.2.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
+    "source-map-loader": "^4.0.1",
     "tailwindcss": "^3.2.4",
+    "ts-loader": "^9.4.2",
+    "typescript": "^4.9.4",
     "vite": "^3.2.3"
   }
 }
